syntax = "proto3";

option go_package = "gitlab.com/inetmock/inetmock/pkg/rpc";
option java_multiple_files = true;
option java_package = "com.github.baez90.inetmock.rpc";
option java_outer_classname = "AuditProto";
option csharp_namespace = "INetMock.Client.Rpc";

package inetmock.rpc;

import "google/protobuf/duration.proto";

message ListAvailableDevicesRequest {

}

message ListAvailableDevicesResponse {

    message PCAPDevice {
        string name = 1;
        repeated bytes addresses = 2;
    }

    repeated PCAPDevice availableDevices = 1;
}

message ListRecordingsRequest {

}

message ListRecordingsResponse {
    repeated string subscriptions = 1;
}

message StartPCAPFileRecordRequest {
    string device = 1;
    string targetPath = 2;
    bool promiscuous = 3;
    google.protobuf.Duration readTimeout = 4;
}

message StartPCAPFileRecordResponse {
    string resolvedPath = 1;
}

message StopPCAPFileRecordRequest {
    string consumerKey = 1;
}

message StopPCAPFileRecordResponse {
    bool removed = 1;
}

service PCAP {
    rpc ListAvailableDevices(ListAvailableDevicesRequest) returns (ListAvailableDevicesResponse);
    rpc ListActiveRecordings(ListRecordingsRequest) returns (ListRecordingsResponse);
    rpc StartPCAPFileRecording(StartPCAPFileRecordRequest) returns (StartPCAPFileRecordResponse);
    rpc StopPCAPFileRecord(StopPCAPFileRecordRequest) returns (StopPCAPFileRecordResponse);
}
